# MiniPSI

./: buildAll.get
libOTe/: .gitignore  CMakeLists.txt
libOTe/cryptoTools/cryptoTools/Common/: Defines.h
libOTe/cryptoTools/cryptoTools/Crypto/: Curve.h  Rijndael256.h
libOTe/cryptoTools/cryptoTools/Network/: SocketAdapter.h
libPSI/: CMakeLists.txt
libPSI/MiniPSI_ristretto/: MiniSender_Ris.cpp
